[package]
name = "libfl"
description = "Library for floating point operations that supports rounding modes and fpu exceptions"
repository = "https://github.com/fakelag/libfl"
version = "0.0.3"
edition = "2021"
authors = ["fakelag"]
license = "MIT"
build = "build.rs"
links = "libfl"
include = ["/src", "build.rs"]

[dependencies]
cty = "0.2.2"

[build-dependencies]
cc = "1.2.16"
